# PRiME-Framework

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE.md  README.md
app/: app_template.cpp  app_template_with_ui.cpp
app/jacobi/: app_random.h  jacobi.cpp  jacobi.h  jacobi_kernel.h  oclUtil.cpp  oclUtil.h
app/jacobi/assets/: jacobi-256.aocx  jacobi.cl
app/stereo_vision/include/: ComFunc.h  StereoMatch.h
app/stereo_vision/src/: DispSel_cl.cpp  StereoMatch.cpp  sm_wrapper.cpp
app/video_decode/: video_decode.cpp
app/whetstone/: app_random.h  whetstone.cpp
dev/c5soc/: architecture_c5soc.json  c5soc.cpp
dev/odroid_xu3/: architecture_odroid_xu3.json  dev_odroid_xu3.cpp  odroid-prereq.sh
dev/util/kocl/: KOCL.cpp  KOCL.py
dev/util/kocl/include/: KOCL.h
docs/: block_diagram.xml
docs/ERSdiagrams/: assertions.docx
lib/: prime_api_app.cpp  prime_api_dev.cpp  prime_api_rtm.cpp  uds.cpp  util.cpp
lib/include/: prime_api_app.h  prime_api_app_t.h  prime_api_dev.h  prime_api_dev_t.h  prime_api_rtm.h  prime_api_t.h  uds.h  util.h
logger/: analysis_pareto.py  analysis_time_series.py  logger.py  loggerClasses.py  monitor_OPs.py  pareto_front_2D.py  to_precision.py
logger/example_data/: odroid_profile_whetstone.txt
rtm/: rtm_arch_utils.cpp
rtm/codegen_qlearn/: codegen.cpp  codegen.hpp  rtm.cpp
rtm/codegen_qlearn_mapping/: codegen.cpp  codegen.hpp  rtm.cpp
rtm/include/: rtm_arch_utils.h
rtm/lrgd/include/: model.h  regression.h
rtm/lrgd/src/: model.cpp  regression.cpp  rtm.cpp
rtm/pmc_based/: mrpi_to_freq-v1.cpp  mrpi_to_freq-v1.hpp  phaseprediction.h  rtm-v2.cpp
rtm/profile/: rtm.cpp
rtm/thermal-rtm/: AdaptiveDVFS.h  phaseprediction.c  phaseprediction.h  thermal-rtm.cpp  thermal-rtm.hpp
ui/: ui.py  uiAutoForm.py  uiDemoForm.py  uiMainForm.py  uiPRIMEApp.py  uiTSGForm.py
ui/test_scripts/: codegen_qlearn_mapping_and_video_decode.json  jacobi_template_script.json  video_decode_10_sec.json  video_decode_cumulative.json
